<resources>
    <string name="app_name">SSBirthdayPal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">My friends</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cardTitle">Title</string>
    <string name="cardSubtitle">Subtitle</string>
    <string name="CardBody">Body</string>
    <string name="action_signOut">Sign out</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="remarks">remarks</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="login">Log in</string>
    <string name="filterAndSorting">filterAndSorting</string>
    <string name="search">search</string>
    <string name="filter_and_sorting">Filter and sorting</string>
    <string name="sort_name_by">Sort name by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="filter_by">Filter by</string>
</resources>