<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_list_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_list_item_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cardSubtitle"
                android:layout_weight="1"
                android:gravity="end"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textview_list_item_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CardBody"
            android:textStyle="italic" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>