<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/textview_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textview_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="age"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="age"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="age"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="age"
        android:inputType="number"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous"/>
    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>



</LinearLayout>