<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_and_sorting"
        android:textAppearance="?textAppearanceTitleLarge"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@android:drawable/ic_menu_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_sortSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/textView_sortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:text="@string/sort_name_by"
        android:textAppearance="?textAppearanceLabelLarge" />

    <LinearLayout
        android:id="@+id/linearLayout_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_sortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_Sort"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending"
                tools:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_SortDescending"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView_filterBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:text="@string/filter_by"
            android:textAppearance="?textAppearanceLabelLarge" />

    <Spinner
        android:id="@+id/spinner_filterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@android:drawable/ic_menu_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_filterSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_resetAll"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="Reset" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_apply"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="Apply" />
    </LinearLayout>
</LinearLayout>